# Meli

./: .gitignore  DISCLAIMER.md  LICENSE  PKGBUILD  README.md  app.py  config.py  install.sh  meli-ingest.service  meli-labyrinth-digest.service  meli-labyrinth-digest.timer  meli.desktop  meli.service  packages.txt  pyproject.toml  requirements.txt  run.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
alerts/notifiers/: __init__.py  desktop.py  email_smtp.py
docs/: ALERT-RULES.md  API-KEYS.md  ARCHITECTURE.md  ATRIUM.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  HONEYPOT-INTEGRATION.md  INSTALL.md  LABYRINTH.md
electron/: main.js  package.json
enrichment/: abuseipdb.py  geolocation.py  ipinfo.py  virustotal.py
ingest/: mqtt_handler.py
ingest/parsers/: __init__.py  heralding.py
labyrinth/: filesystem.py  host_key.py  shell.py
meli/: __init__.py  __main__.py  app.py  auth.py  config.py  eula.py  event_bus.py  updater.py
meli/alerts/: engine.py  sound.py
meli/classification/: default_rules.yaml  ioc.py  rules.py  severity.py
meli/database/: __init__.py  backup.py  models.py
meli/enrichment/: __init__.py  cache.py  greynoise.py  shodan.py
meli/ingest/: daemon.py  processor.py
meli/labyrinth/: __init__.py  blocklist.py  botdetect.py  canary.py  cohort.py  commands.py  daemon.py  digest.py  fake_contents.py  filesystem.py  host_key.py  polaroid.py  replay.py  replay_export.py  sink.py  ssh_server.py  sticky.py  taunts.py  tripwire.py
meli/meli/: __init__.py  app.py
meli/ui/: atrium.py  lock_screen.py  main_window.py  setup_wizard.py  splash_screen.py  updater_dialog.py
meli/utils/: helpers.py  logger.py
meli/webapi/: __init__.py  __main__.py  server.py
reports/: generator.py
scripts/: cowrie_to_meli.py  generate_splash_sound.py
tests/: conftest.py  test_auth.py  test_classification.py  test_helpers.py  test_parsers.py
ui/: main_window.py
ui/views/: commands.py  (+11 more)
utils/: crypto.py
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+63 files in other folders)
